fix wizzard vertical alignament

--- a/assets/css/style-wizard.css
+++ b/assets/css/style-wizard.css
@@ -43,9 +43,9 @@
 
 h2.wpmm-title {
     margin: 0 !important;
-    padding: 8px 48px 8px 100px !important;
+    padding: 8px 48px 8px 188px !important;
     background-color: #fff;
-    background-position: 48px;
+    background-position: 130px;
     position: relative;
 }
 
